Tweak some font sizes and fix nav bar overflow when hidden.
This sacrifices the animation, which wasn't very nice anyway.

--- a/scss/theme/_exhibit.scss
+++ b/scss/theme/_exhibit.scss
@@ -32,6 +32,7 @@
   @include clearfix();
   float: left;
   margin-bottom: $margin-md;
+  font-size: $font-size-sm;
 }
 
 .exhibit-block {
