--- a/scss/theme/_pagination.scss
+++ b/scss/theme/_pagination.scss
@@ -2,7 +2,7 @@
   clear: both;
   margin-bottom: $margin-md;
   overflow: hidden;
-  width: auto;
+  font-size: $font-size-sm;
 }
 
 #item-pagination-desktop {
